codepkg/objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>AverageSalary__c</fullName>
        <formula>SumSalary__c /  Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AverageSalary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountEmplyeeWorkflow__c</fullName>
        <label>CountEmplyeeWorkflow</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Email_of_office_manager__c</fullName>
        <label>Email of office manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MaxSalary__c</fullName>
        <label>MaxSalary</label>
        <summarizedField>Employee__c.Salary__c</summarizedField>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MinSalary__c</fullName>
        <label>MinSalary</label>
        <summarizedField>Employee__c.Salary__c</summarizedField>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OfficeName__c</fullName>
        <label>OfficeName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>Departments</relationshipLabel>
        <relationshipName>Departments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SumSalary__c</fullName>
        <label>SumSalary</label>
        <summarizedField>Employee__c.Salary__c</summarizedField>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Department Name New</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>